@@ -33,6 +33,7 @@ pkginclude_HEADERS = dvbpsi.h psi.h descriptor.h demux.h \
                      descriptors/dr_47.h \
                      descriptors/dr_48.h \
                      descriptors/dr_55.h \
+                     descriptors/dr_56.h \
                      descriptors/dr_59.h \
                      descriptors/dr.h
 
@@ -54,6 +55,7 @@ descriptors_src = descriptors/dr_02.c \
                   descriptors/dr_47.c \
                   descriptors/dr_48.c \
                   descriptors/dr_55.c \
+                  descriptors/dr_56.c \
                   descriptors/dr_59.c
 
 tables_src = tables/pat.c tables/pat_private.h \
